--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -10,8 +10,9 @@ test:
 
 # Add 'source' label to any change to src files within the source dir EXCEPT for the docs sub-folder
 source:
-  - any: ['src/**/*', '!src/**/*.md']
+  - src/**/*
+  - !src/**/*.md
 
 # Add 'chore' label to any change to script files
 chore:
-  - any: ['script/**/*']
+  - script/**/*
